--- a/windows/settings.json
+++ b/windows/settings.json
@@ -42,5 +42,69 @@
     "workbench.editor.showTabs": true,
     "[ruby]": {
         "editor.tabSize": 2
-    }
+    },
+    "[html.erb]": {
+        "editor.tabSize": 2
+    },
+    "[vue]": {
+        "editor.tabSize": 2
+    },
+    "[scss]": {
+        "editor.tabSize": 2
+    },
+    "[html]": {
+        "editor.suggest.insertMode": "replace",
+        "editor.tabSize": 2
+    },
+    "editor.renderWhitespace": "all",
+    "multiCommand.commands": [
+        {
+            "command": "multiCommand.Down",
+            "sequence": [
+                "cursorDown"
+            ]
+        },
+        {
+            "command": "multiCommand.Up",
+            "sequence": [
+                "cursorUp"
+            ]
+        },
+        {
+            "command": "multiCommand.Left",
+            "sequence": [
+                "cursorLeft"
+            ]
+        },
+        {
+            "command": "multiCommand.Right",
+            "sequence": [
+                "cursorRight"
+            ]
+        },
+        {
+            "command": "multiCommand.DownSelect",
+            "sequence": [
+                "cursorDownSelect"
+            ]
+        },
+        {
+            "command": "multiCommand.UpSelect",
+            "sequence": [
+                "cursorUpSelect"
+            ]
+        },
+        {
+            "command": "multiCommand.LeftSelect",
+            "sequence": [
+                "cursorLeftSelect"
+            ]
+        },
+        {
+            "command": "multiCommand.RightSelect",
+            "sequence": [
+                "cursorRightSelect"
+            ]
+        }
+    ]
 }
