--- a/ubuntu/settings.json
+++ b/ubuntu/settings.json
@@ -5,7 +5,6 @@
     "editor.formatOnType": true,
     //ペーストしたときにコードを整えてくれる
     "editor.formatOnPaste": true,
-
     //予測をどのときに出すのか
     "editor.quickSuggestions": {
         "other": true,
@@ -91,6 +90,18 @@
             "command": "multiCommand.RightSelect",
             "sequence": [
                 "cursorRightSelect"
+            ]
+        },
+        {
+            "command": "multiCommand.deleteLeft",
+            "sequence": [
+                "deleteLeft"
+            ]
+        },
+        {
+            "command": "multiCommand.deleteRight",
+            "sequence": [
+                "deleteRight"
             ]
         }
     ]
